--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "Matcha",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "A basic dating site",
   "version": "0.1.0",
-  "license": "MIT",
+  "license": "UNLICENCED",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -16,9 +16,13 @@
   "dependencies": {
     "gatsby": "^2.21.37",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-react": "^7.20.0",
     "prettier": "2.0.5"
   },
   "repository": {
