--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "bootstrap": "^4.5.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react": "^7.20.0",
