--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.21.37",
+    "inherits": "^2.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "yarn": "^1.22.4"
