--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "yarn": "^1.22.4"
   },
   "devDependencies": {
+    "@reach/router": "^1.3.3",
     "eslint-config-google": "^0.14.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-react": "^7.20.0",
+    "firebase": "^7.14.6",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "prettier": "2.0.5"
   },
   "repository": {
