--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "inherits": "^2.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-image-gallery": "^1.0.7",
+    "style-loader": "^1.2.1",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
